Curves: pick select does not work correctly in multi-object editing #105109

Closed
opened 2023-02-23 06:31:00 +01:00 by Sun Kim · 5 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.2.1.230210

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-02-21 23:45, hash: 8b6396623682
Worked: n/a

Short description of error
When doing multi-object editing in curves edit mode, deselect by click only deselects elements on the active object.

Exact steps for others to reproduce the error
CurvesMultiEdit.mp4

  • Add multiple (hair) curves objects
  • Select all of them, and switch to edit mode
  • Select points over the objects
  • Click somewhere to deselect
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 23.2.1.230210 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-02-21 23:45, hash: `8b6396623682` Worked: n/a **Short description of error** When doing multi-object editing in curves edit mode, deselect by click only deselects elements on the active object. **Exact steps for others to reproduce the error** [CurvesMultiEdit.mp4](/attachments/72083c3c-a86d-4391-a5cb-d7198ea3e103) - Add multiple (hair) curves objects - Select all of them, and switch to edit mode - Select points over the objects - Click somewhere to deselect
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-23 06:31:00 +01:00
Author
Contributor

Oh yeah, rather, select by picking only works on the active object in multi-object editing.

Oh yeah, rather, select by picking only works on the active object in multi-object editing.
Member

Can confirm.

We need to loop with e.g BKE_view_layer_array_from_objects_in_edit_mode_unique_data and probably ed::curves::select_pick needs to be refactored to take an object also (and not always use obact from ViewContext)

CC @filedescriptor

Can confirm. We need to loop with e.g `BKE_view_layer_array_from_objects_in_edit_mode_unique_data` and probably `ed::curves::select_pick` needs to be refactored to take an object also (and not always use `obact` from `ViewContext`) CC @filedescriptor
Philipp Oeser added
Status
Confirmed
Module
Nodes & Physics
and removed
Status
Needs Triage
labels 2023-02-23 10:03:05 +01:00
Philipp Oeser changed title from Curves: deselect does not work in multi-object editing to Curves: pick select does not work correctly in multi-object editing 2023-02-23 10:03:57 +01:00
Falk David self-assigned this 2023-02-23 12:12:09 +01:00
Member

Looks like this also affects all the other selection operators.
It might be nice to remove the ViewContext argument actually, since this is meant to be a lower level function used in various places. That might help keep the function reusable for the future grease pencil object type.

Looks like this also affects all the other selection operators. It might be nice to remove the `ViewContext` argument actually, since this is meant to be a lower level function used in various places. That might help keep the function reusable for the future grease pencil object type.
Falk David added a new dependency 2023-02-23 16:39:16 +01:00
Falk David removed a dependency 2023-02-23 16:39:23 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-02-23 21:47:22 +01:00
Hans Goudey added this to the 3.5 milestone 2023-02-23 21:47:26 +01:00
Member

@HooglyBoogly Actually, all the other selection operators work, because in the execute functions of the main entry points in view3d_select.cc they use FOREACH_OBJECT_IN_MODE_BEGIN. The reason why pick selection is different is because it should only ever select one element, i.e. it needs to consider all the elements of all the objects. The other selection operators can just run on each object individually.

@HooglyBoogly Actually, all the other selection operators work, because in the execute functions of the main entry points in `view3d_select.cc` they use `FOREACH_OBJECT_IN_MODE_BEGIN`. The reason why pick selection is different is because it should only ever select one element, i.e. it needs to consider all the elements of all the objects. The other selection operators can just run on each object individually.

Am I reading this bug report correctly?

The exact steps for reproducing the error reads:

  • Add multiple (hair) curves objects
  • Select all of them, and switch to edit mode
  • Select points over the objects
  • Click somewhere to deselect

This suggests that the title should read "Click deselect does not work correctly in multi-object editing".
That is: In the current title as of this posting "Pick select" should be changed to "Click deselect".

The issue is n/a for other versions of blender (only 6.0) -- so perhaps this is a new feature that is not working?

Am I reading this bug report correctly? The exact steps for reproducing the error reads: * Add multiple (hair) curves objects * Select all of them, and switch to edit mode * Select points over the objects * Click somewhere to deselect This suggests that the title should read "Click deselect does not work correctly in multi-object editing". That is: In the current title as of this posting "Pick select" should be changed to "Click deselect". The issue is n/a for other versions of blender (only 6.0) -- so perhaps this is a new feature that is not working?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-02 15:43:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105109
No description provided.