Fix #105109: Pick selection with multi object edit

Pick selection for the Curves object was not considering multi object
editing. Only the active object was considered.

This fix introduces pick selection for Curves for multi object editing